feat: create route & swagger request for password reset
