# src/routes/auth-router.ts
@@ -1,4 +1,4 @@
-import { emailValidation, login, passwordRecovery, register } from "../controllers";
+import { emailValidation, login, passwordRecovery, passwordReset, register } from "../controllers";
 import express from "express";
 
 const authRouter = express();
@@ -7,5 +7,6 @@ authRouter.post("/register", register);
 authRouter.post("/verify", emailValidation);
 authRouter.post("/login", login);
 authRouter.post("/recovery", passwordRecovery)
+authRouter.post("/reset", passwordReset)
 
 export default authRouter;
